; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/solaris/remote/extr_19669.c_xdr_nm_send_footer.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/solaris/remote/extr_19669.c_xdr_nm_send_footer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nm_send_footer = type { i32 }

@FALSE = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @xdr_nm_send_footer(i32* %0, %struct.nm_send_footer* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca %struct.nm_send_footer*, align 8
  store i32* %0, i32** %4, align 8
  store %struct.nm_send_footer* %1, %struct.nm_send_footer** %5, align 8
  %6 = load i32*, i32** %4, align 8
  %7 = load %struct.nm_send_footer*, %struct.nm_send_footer** %5, align 8
  %8 = getelementptr inbounds %struct.nm_send_footer, %struct.nm_send_footer* %7, i32 0, i32 0
  %9 = call i32 @xdr_wrapstring(i32* %6, i32* %8)
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %13, label %11

11:                                               ; preds = %2
  %12 = load i32, i32* @FALSE, align 4
  store i32 %12, i32* %3, align 4
  br label %15

13:                                               ; preds = %2
  %14 = load i32, i32* @TRUE, align 4
  store i32 %14, i32* %3, align 4
  br label %15

15:                                               ; preds = %13, %11
  %16 = load i32, i32* %3, align 4
  ret i32 %16
}

declare dso_local i32 @xdr_wrapstring(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
